[project]
name = "agent-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain-text-splitters>=1.1.2",
    "openai>=2.41.1",
    "pdf2docx>=0.5.13",
    "pymupdf4llm>=1.27.2.3",
    "pymupdfpro>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "weaviate-client[agents]>=4.22.0",
]
